<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">blooddonor</string>
    <string name="app_slogan">Donnez, Sauvez des vies</string>
    <string name="app_logo">App Logo</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="login">Se connecter</string>
    <string name="or_create_account">ou créer un compte</string>
    <string name="signup_donor">S\'inscrire comme Donneur</string>
    <string name="signup_hospital">S\'inscrire comme Hôpital</string>
    <string-array name="staff_positions">
        <item>Médecin</item>
        <item>Infirmier/Infirmière</item>
        <item>Technicien de laboratoire</item>
        <item>Administrateur/Administratrice</item>
        <item>Réceptionniste</item>
    </string-array>
    <string name="your_impact">Votre impact</string>
    <string name="initial_donation_count">%1$d Dons</string>
    <string name="total_volume">Volume total</string>
    <string name="initial_volume">%1$.1fL</string>
    <string name="lives_impacted">Vies affectées</string>
    <string name="initial_lives_saved">%d</string>
    <string name="my_donations">Mes dons</string>
    <string name="all">Tous</string>
    <string name="this_year">Cette année</string>
    <string name="this_month">Ce mois</string>
    <string name="no_donations">Aucun don pour l\'instant</string>
    <string name="donations_appear_here">Vos dons apparaîtront ici</string>
    <string name="new_donation">Nouveau don</string>
    <!-- strings.xml -->
    <string name="donation_number">Donation #%d</string>
    <string name="blood_type_placeholder">%s</string>
    <string name="date">Date</string>
    <string name="date_placeholder">%s</string>
    <string name="location">Location</string>
    <string name="location_placeholder">%s</string>
    <string name="volume">Volume</string>
    <string name="volume_placeholder">%d ml</string>
    <string name="share">Share</string>
    <string name="details">Details</string>
    <string name="logout">Se deconecter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="blood_types">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string name="hospital_icon">Hospital Icon</string>
    <string name="contact_info">Contact Information</string>
    <string name="disconnect">Disconnect</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="contact_information">Contact Information</string>
    <string name="default_notification_channel_id">blood_requests_channel</string>
    <string name="total_requests">Total Requests</string>
    <string name="pending_requests">Pending</string>
    <string name="critical_requests">Critical</string>
    <string name="fulfilled_requests">Fulfilled</string>
</resources>
